Corrigido o bug do qual a barra de menu mobile não aparecia

--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,10 @@
             <a href="#" class="logo">
               <img src="imagens/Logo.png" alt="Logo do Sistema" class="logo-img">
             </a>
+
+            <button class="mobile-toggle">
+                <i class="fa-solid fa-bars"></i>
+            </button>
             <nav class="nav-menu">
                 <ul>
                     <li><a href="index.html">Início</a></li>
