Mudando pra um padrão mais Apple

--- a/src/about/sobre.html
+++ b/src/about/sobre.html
@@ -27,7 +27,7 @@
             <span class="pill-badge">Nossa Filosofia</span>
             <h1>Não gerenciamos prédios.<br>Cuidamos de Lares.</h1>
             <p>
-                A tecnologia deve ser invisível. O que importa é o síndico ter paz para dormir 
+                Para nós o que importa é o síndico ter paz para dormir 
                 e o morador ter orgulho de onde vive. Por isso esse sistema existe.
             </p>
         </div>
@@ -39,20 +39,20 @@
         <div class="values-grid">
             <div class="value-card">
                 <div class="icon-box blue"><i class="fa-regular fa-lightbulb"></i></div>
-                <h3>Simplicidade Radical</h3>
+                <h3>Acessibilidade</h3>
                 <p>Se precisa de manual para usar, falhamos. Nosso software é intuitivo como conversar com um amigo.</p>
             </div>
             
             <div class="value-card">
                 <div class="icon-box purple"><i class="fa-solid fa-shield-halved"></i></div>
-                <h3>Segurança de Banco</h3>
-                <p>Dados de moradores são sagrados. Usamos criptografia de ponta a ponta em cada vírgula.</p>
+                <h3>Segurança</h3>
+                <p>Seus dados são sagrados. Usamos criptografia de ponta a ponta.</p>
             </div>
             
             <div class="value-card">
                 <div class="icon-box green"><i class="fa-solid fa-people-roof"></i></div>
-                <h3>Empatia Real</h3>
-                <p>Não somos robôs. Entendemos que atrás de cada boleto existe uma família e uma história.</p>
+                <h3>Empatia</h3>
+                <p>Não somos robôs. Entendemos que atrás de cada boleto ou pix existe uma família e uma história.</p>
             </div>
         </div>
     </section>
@@ -102,7 +102,7 @@
     </section>
 
     <footer class="simple-footer">
-        <p>© 2025 Condomínio App. Feito com 💙 em Mococa.</p>
+        <p>© 2025 Condomínio App.</p>
         <p style="font-size: 0.8rem; margin-top: 10px; opacity: 0.7;">
             Designed & Developed by <a href="https://github.com/Eduuhbruscagim" target="_blank" style="color: var(--primary); text-decoration: none;">Eduardo Bruscagim</a>
         </p>
