Acredito que a Auth esteja finalizada

--- a/src/auth/forgot-password.html
+++ b/src/auth/forgot-password.html
@@ -44,6 +44,8 @@
           </div>
         </div>
 
+        <div id="feedback" class="status-msg"></div>
+
         <button type="submit" class="btn btn-primary btn-full">
           Enviar Link de Recuperação
         </button>
@@ -53,26 +55,63 @@
         </div>
       </form>
 
-      <a href="index.html" class="back-link">
+      <a href="../index.html" class="back-link">
         <i class="fa-solid fa-arrow-left"></i> Voltar para o site
       </a>
     </main>
 
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+
     <script>
-      function handleRecovery(e) {
+      const SUPABASE_URL = "https://dtfzvbtodlyyfokfgllv.supabase.co";
+      const SUPABASE_KEY =
+        "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImR0Znp2YnRvZGx5eWZva2ZnbGx2Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjY4MDE0NDUsImV4cCI6MjA4MjM3NzQ0NX0.L6qGW1Bl8k0eQhvJL_IvGE3q7yVPGPELL2beiDLhQ_Y";
+
+      const clienteSupabase = window.supabase.createClient(
+        SUPABASE_URL,
+        SUPABASE_KEY
+      );
+
+      async function handleRecovery(e) {
         e.preventDefault();
+
         const btn = e.target.querySelector("button");
+        const feedbackBox = document.getElementById("feedback");
+        const email = document.getElementById("email").value;
         const originalText = btn.innerText;
 
+        // Reset visual
+        feedbackBox.style.display = "none";
+        feedbackBox.className = "status-msg";
+
         btn.innerText = "Enviando...";
+        btn.disabled = true;
         btn.style.opacity = "0.7";
 
-        setTimeout(() => {
-          alert("Se o e-mail existir, você receberá um link em instantes.");
-          btn.innerText = "E-mail Enviado!";
-          btn.style.backgroundColor = "#10b981"; // Verde sucesso
+        // Envia email de reset
+        const { data, error } =
+          await clienteSupabase.auth.resetPasswordForEmail(email, {
+            redirectTo:
+              window.location.origin + "/src/auth/update-password.html",
+          });
+
+        if (error) {
+          feedbackBox.innerText = "Erro: " + error.message;
+          feedbackBox.classList.add("error");
+          feedbackBox.style.display = "block";
+
+          btn.innerText = originalText;
+          btn.disabled = false;
           btn.style.opacity = "1";
-        }, 1500);
+        } else {
+          // SUCESSO (Verde)
+          feedbackBox.innerText =
+            "Se o e-mail existir, você receberá o link em instantes.";
+          feedbackBox.classList.add("success");
+          feedbackBox.style.display = "block";
+
+          btn.innerText = "E-mail Enviado!";
+        }
       }
     </script>
   </body>
