--- a/src/auth/register.html
+++ b/src/auth/register.html
@@ -39,6 +39,19 @@
           </div>
         </div>
 
+        <div class="input-group">
+          <label for="phone">Celular</label>
+          <div class="input-wrapper">
+            <i class="fa-solid fa-phone"></i>
+            <input
+              type="tel"
+              id="phone"
+              placeholder="(11) 99999-9999"
+              required
+            />
+          </div>
+        </div>
+
         <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 15px">
           <div class="input-group">
             <label for="block">Bloco</label>
@@ -106,14 +119,9 @@
 
     <script>
       const SUPABASE_URL = "https://dtfzvbtodlyyfokfgllv.supabase.co";
-      const SUPABASE_KEY =
-        "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImR0Znp2YnRvZGx5eWZva2ZnbGx2Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjY4MDE0NDUsImV4cCI6MjA4MjM3NzQ0NX0.L6qGW1Bl8k0eQhvJL_IvGE3q7yVPGPELL2beiDLhQ_Y";
-
-      // Variável segura
-      const clienteSupabase = window.supabase.createClient(
-        SUPABASE_URL,
-        SUPABASE_KEY
-      );
+      const SUPABASE_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImR0Znp2YnRvZGx5eWZva2ZnbGx2Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjY4MDE0NDUsImV4cCI6MjA4MjM3NzQ0NX0.L6qGW1Bl8k0eQhvJL_IvGE3q7yVPGPELL2beiDLhQ_Y";
+      
+      const clienteSupabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
 
       async function handleRegister(e) {
         e.preventDefault();
@@ -122,10 +130,13 @@
         const feedbackBox = document.getElementById("feedback");
         const originalText = btn.innerText;
 
-        feedbackBox.style.display = "none";
-        feedbackBox.className = "status-msg";
-
+        // Limpa erros anteriores
+        feedbackBox.style.display = 'none';
+        feedbackBox.className = 'status-msg';
+        
+        // Coleta dados
         const nome = document.getElementById("name").value;
+        const celular = document.getElementById("phone").value;
         const bloco = document.getElementById("block").value;
         const unidade = document.getElementById("unit").value;
         const email = document.getElementById("email").value;
@@ -135,38 +146,63 @@
         btn.disabled = true;
         btn.style.opacity = "0.7";
 
-        const { data, error } = await clienteSupabase.auth.signUp({
-          email: email,
-          password: password,
-          options: {
-            data: {
-              full_name: nome,
-              bloco: bloco,
-              unidade: unidade,
-            },
-          },
+        // 1. CRIA O LOGIN (AUTH)
+        const { data: authData, error: authError } = await clienteSupabase.auth.signUp({
+            email: email,
+            password: password,
+            options: {
+                data: { full_name: nome }
+            }
         });
 
-        if (error) {
-          // ERRO
-          feedbackBox.innerText = "Erro: " + error.message;
-          feedbackBox.classList.add("error");
-          feedbackBox.style.display = "block";
-
-          btn.innerText = originalText;
-          btn.disabled = false;
-          btn.style.opacity = "1";
-        } else {
-          // SUCESSO
-          feedbackBox.innerText = "Conta criada com sucesso! Redirecionando...";
-          feedbackBox.classList.add("success"); // Fica verde
-          feedbackBox.style.display = "block";
-
-          // Espera 2 segundinhos pro usuário ler e manda pro login
-          setTimeout(() => {
-            window.location.href = "login.html";
-          }, 2000);
+        if (authError) {
+            mostrarErro(authError.message, btn, originalText, feedbackBox);
+            return;
         }
+
+        // 2. SE DEU CERTO, INSERE NA TABELA "MORADORES" (PUBLIC)
+        // Isso conecta o Login com o Banco de Dados
+        btn.innerText = "Configurando perfil...";
+
+        const { error: dbError } = await clienteSupabase
+            .from('moradores')
+            .insert([
+                {
+                    nome: nome,
+                    email: email,       // <--- IMPORTANTE: Linka com o Login
+                    celular: celular,
+                    unidade: `${unidade} - Bloco ${bloco}`,
+                    tipo: "Morador",
+                    cargo: "morador",   // <--- IMPORTANTE: Nasce como peão (não é Dono)
+                    status: "ok",
+                    img: `https://ui-avatars.com/api/?name=${nome}&background=random`
+                }
+            ]);
+
+        if (dbError) {
+            console.error(dbError);
+            mostrarErro("Conta criada, mas houve erro ao salvar dados do perfil.", btn, originalText, feedbackBox);
+            // Redireciona mesmo com erro no banco, pois o login existe
+            setTimeout(() => { window.location.href = "login.html"; }, 3000);
+        } else {
+            // SUCESSO TOTAL
+            feedbackBox.innerText = "Cadastro completo! Redirecionando...";
+            feedbackBox.classList.add("success");
+            feedbackBox.style.display = "block";
+
+            setTimeout(() => {
+                window.location.href = "login.html";
+            }, 2000);
+        }
+      }
+
+      function mostrarErro(msg, btn, originalText, box) {
+        box.innerText = "Erro: " + msg;
+        box.classList.add("error");
+        box.style.display = "block";
+        btn.innerText = originalText;
+        btn.disabled = false;
+        btn.style.opacity = "1";
       }
     </script>
   </body>
