--- a/src/dashboard/dashboard.html
+++ b/src/dashboard/dashboard.html
@@ -236,6 +236,29 @@
       </div>
     </div>
 
+    <div id="modal-confirm-delete" class="modal-overlay">
+      <div class="modal-glass" style="max-width: 400px; text-align: center;">
+        
+        <div style="font-size: 3rem; color: #ef4444; margin-bottom: 15px;">
+            <i class="fa-solid fa-circle-exclamation"></i>
+        </div>
+
+        <h3>Tem certeza?</h3>
+        <p style="color: #64748b; margin-bottom: 25px;">
+            Essa ação apagará o morador permanentemente do banco de dados.
+        </p>
+
+        <div style="display: flex; gap: 10px; justify-content: center;">
+            <button class="btn btn-outline" onclick="fecharModalExclusao()" style="border-color: #cbd5e1; color: #64748b;">
+                Cancelar
+            </button>
+            <button id="btn-confirm-delete" class="btn btn-primary" style="background: #ef4444; border: none; color: white; box-shadow: 0 4px 10px rgba(239,68,68,0.3);">
+                Sim, Excluir
+            </button>
+        </div>
+      </div>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="dashboard.js"></script>
   </body>
