--- a/src/auth/update-password.html
+++ b/src/auth/update-password.html
@@ -11,10 +11,10 @@
     <link rel="stylesheet" href="../global.css" />
     <link rel="stylesheet" href="login.css" />
     <style>
+      /* Estilos para o botão e transições */
+      #btn-salvar { transition: all 0.3s ease; }
       #toast-container { position: fixed; top: 20px; right: 20px; z-index: 10000; display: flex; flex-direction: column; gap: 10px; }
       .toast { min-width: 300px; background: rgba(255, 255, 255, 0.9); backdrop-filter: blur(10px); border: 1px solid rgba(255, 255, 255, 0.5); border-radius: 12px; padding: 16px 20px; box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1); display: flex; align-items: center; gap: 12px; font-family: 'Plus Jakarta Sans', sans-serif; font-size: 0.95rem; color: #1e293b; animation: slideIn 0.4s ease; }
-      .toast.success { border-left: 4px solid #10b981; }
-      .toast.error { border-left: 4px solid #ef4444; }
       @keyframes slideIn { from { transform: translateX(100%); } to { transform: translateX(0); } }
     </style>
   </head>
@@ -49,68 +49,68 @@
 
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
-<script>
-  const SUPABASE_URL = "https://dtfzvbtodlyyfokfgllv.supabase.co";
-  const SUPABASE_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImR0Znp2YnRvZGx5eWZva2ZnbGx2Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjY4MDE0NDUsImV4cCI6MjA4MjM3NzQ0NX0.L6qGW1Bl8k0eQhvJL_IvGE3q7yVPGPELL2beiDLhQ_Y";
+    <script>
+      // DECLARAÇÃO ÚNICA E PROTEGIDA
+      const SB_URL = "https://dtfzvbtodlyyfokfgllv.supabase.co";
+      const SB_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImR0Znp2YnRvZGx5eWZva2ZnbGx2Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjY4MDE0NDUsImV4cCI6MjA4MjM3NzQ0NX0.L6qGW1Bl8k0eQhvJL_IvGE3q7yVPGPELL2beiDLhQ_Y";
 
-  const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
+      // Usando o cliente globalmente sem redeclarar
+      const supabaseClient = window.supabase.createClient(SB_URL, SB_KEY);
 
-  // Verificação de link expirado ao abrir
-  window.onload = async () => {
-    const { data: { session } } = await supabase.auth.getSession();
-    if (!session) {
-      document.body.innerHTML = `
-        <div style="display:flex; justify-content:center; align-items:center; height:100vh; background:#f1f5f9; font-family:sans-serif; padding: 20px;">
-          <div style="background:white; padding:40px; border-radius:12px; text-align:center; box-shadow:0 4px 6px rgba(0,0,0,0.1); max-width: 400px;">
-            <h2 style="color:#ef4444; margin-top:0;">Link Expirado 🚫</h2>
-            <p style="color:#64748b;">Este link de recuperação é de uso único e já expirou.</p>
-            <a href="forgot-password.html" style="display:inline-block; margin-top:15px; background:#2563eb; color:white; padding:10px 20px; border-radius:8px; text-decoration:none; font-weight:bold;">Novo Link</a>
-          </div>
-        </div>`;
-    }
-  };
+      window.onload = async () => {
+        const { data: { session } } = await supabaseClient.auth.getSession();
+        if (!session) {
+          document.body.innerHTML = `
+            <div style="display:flex; justify-content:center; align-items:center; height:100vh; background:#f1f5f9; font-family:sans-serif; padding: 20px;">
+              <div style="background:white; padding:40px; border-radius:12px; text-align:center; box-shadow:0 4px 6px rgba(0,0,0,0.1); max-width: 400px;">
+                <h2 style="color:#ef4444; margin-top:0;">Link Expirado 🚫</h2>
+                <p style="color:#64748b;">Este link de recuperação é de uso único e já expirou ou foi invalidado.</p>
+                <a href="forgot-password.html" style="display:inline-block; margin-top:15px; background:#2563eb; color:white; padding:10px 20px; border-radius:8px; text-decoration:none; font-weight:bold;">Novo Link</a>
+              </div>
+            </div>`;
+        }
+      };
 
-  async function handleUpdatePassword(e) {
-    e.preventDefault();
-    const btn = document.getElementById("btn-salvar");
-    const password = document.getElementById("password").value;
+      async function handleUpdatePassword(e) {
+        e.preventDefault();
+        const btn = document.getElementById("btn-salvar");
+        const password = document.getElementById("password").value;
 
-    if (password.length < 6) {
-      btn.innerText = "Mínimo 6 caracteres!";
-      btn.style.background = "#ef4444";
-      setTimeout(() => {
-          btn.innerText = "Salvar Nova Senha";
-          btn.style.background = ""; 
-      }, 2000);
-      return;
-    }
+        if (password.length < 6) {
+          btn.innerText = "Mínimo 6 caracteres!";
+          btn.style.background = "#ef4444";
+          setTimeout(() => {
+              btn.innerText = "Salvar Nova Senha";
+              btn.style.background = ""; 
+          }, 2000);
+          return;
+        }
 
-    // Estado de carregamento
-    btn.innerText = "Atualizando...";
-    btn.disabled = true;
+        btn.innerText = "Atualizando...";
+        btn.disabled = true;
 
-    const { error } = await supabase.auth.updateUser({ password: password });
+        const { error } = await supabaseClient.auth.updateUser({ password: password });
 
-    if (error) {
-      btn.innerText = "Erro ao salvar!";
-      btn.style.background = "#ef4444";
-      btn.disabled = false;
-      console.error(error);
-    } else {
-      // SUCESSO: O botão vira o feedback 
-      btn.innerText = "Senha Atualizada com Sucesso! ✅";
-      btn.style.background = "#10b981"; // Verde sucesso
-      btn.style.borderColor = "#10b981";
+        if (error) {
+          btn.innerText = "Erro ao salvar!";
+          btn.style.background = "#ef4444";
+          btn.disabled = false;
+          console.error("Erro Supabase:", error.message);
+        } else {
+          // FEEDBACK NO BOTÃO (O QUE VOCÊ PEDIU)
+          btn.innerText = "Senha Atualizada com Sucesso! ✅";
+          btn.style.background = "#10b981";
+          btn.style.borderColor = "#10b981";
+          btn.style.color = "white";
 
-      // Logout para invalidar o token antigo e forçar login novo
-      await supabase.auth.signOut();
+          // Desloga para limpar o token e garantir segurança
+          await supabaseClient.auth.signOut();
 
-      // Redireciona depois de 2 segundos para o cara conseguir ler o botão
-      setTimeout(() => {
-        window.location.href = "login.html";
-      }, 2000);
-    }
-  }
-</script>
+          setTimeout(() => {
+            window.location.href = "login.html";
+          }, 2500);
+        }
+      }
+    </script>
   </body>
 </html>
