Melhorar UX mobile e estilos do extrato do caixa
Aprimora estilos responsivos e mobile para modais e tabelas, especialmente para diálogos de confirmação e a tabela de extrato do caixa.
Adiciona a classe .tabela-caixa-extrato e CSS relacionado para melhor exibição e tratamento de labels.
Atualiza o dashboard.js para evitar carregamentos duplicados, melhorar estados de loading e garantir que atualizações em tempo real sejam tratadas de forma eficiente.
Também refina as visões de admin/morador para ocorrências e reservas, além de melhorar a formatação e a estrutura do código para maior manutenibilidade.

--- a/src/dashboard/dashboard.html
+++ b/src/dashboard/dashboard.html
@@ -490,7 +490,7 @@
       </div>
 
       <div class="table-container" style="margin-top:10px">
-        <table class="glass-table">
+        <table class="glass-table tabela-caixa-extrato">
           <thead>
             <tr>
               <th>Data</th>
